--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Primer proyecto con express y typescript",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "build" : "tsc",
+    "start" : "node dist/index.js"
   },
   "author": "DjSantech",
   "license": "ISC",
