--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "colors": "^1.4.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.3"
+    "express-validator": "^7.2.1",
+    "mongoose": "^8.16.3",
+    "slug": "^11.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
